# hugr-kernel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HUGR_IDE_SPECIFICATION.md  HUGR_KERNEL_CONSTITUTION.md  HUGR_KERNEL_SPEC.md  LICENSE  Makefile  README.md  TESTING.md  go.mod  go.sum  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/hugr-kernel/: main.go
duckdb-results/: .gitignore
extensions/jupyterlab/: install.json  package.json  pyproject.toml  tsconfig.json
extensions/jupyterlab/hugr_graphql_ide/: __init__.py
extensions/jupyterlab/jupyter-config/: hugr_connection_service.json
extensions/jupyterlab/schema/: plugin.json
extensions/jupyterlab/src/: commClient.ts  connectionManager.ts  explorerClient.ts  hugrClient.ts  index.ts  plugin.ts  utils.ts
extensions/jupyterlab/src/explorer/: detailModal.ts  directivesList.ts  hugrExplorer.ts  icons.ts  logicalExplorer.ts  schemaExplorer.ts  schemaTree.ts  searchBar.ts  typesSearch.ts
extensions/jupyterlab/src/graphql/: completion.ts  diagnostics.ts  formatting.ts  hover.ts  language.ts
extensions/jupyterlab/style/: index.css
extensions/vscode/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extensions/vscode/resources/screenshots/: README.md
extensions/vscode/src/: connectionTreeProvider.ts  extension.ts  installKernel.ts  oidc.ts
extensions/vscode/src/explorer/: detailPanel.ts  directivesTreeProvider.ts  hugrClient.ts  icons.ts  logicalTreeProvider.ts  schemaTreeProvider.ts  typesSearchProvider.ts
extensions/vscode/src/graphql/: completionProvider.ts  diagnosticProvider.ts  formatting.ts  hoverProvider.ts
hugr_connection_service/: __init__.py  handlers.py  hub_token_provider.py  oidc.py  spool_proxy.py
internal/completion/: astwalker.go  completer.go  context.go  context_test.go  directive_debug_test.go  parseutil.go
internal/connection/: connection.go  manager.go
internal/debug/: debug.go
internal/hover/: hover.go
internal/ide/: cache.go  completion.go  context.go  detail.go  diagnostics.go  explorer.go  hover.go  schema.go  service.go  types.go
internal/kernel/: arrowhttp.go  comm.go  explorer_bridge.go  handlers.go  kernel.go  message.go
internal/meta/: commands.go  parser.go  registry.go
internal/renderer/: table.go
internal/result/: handler.go  spool.go
internal/schema/: client.go  queries.go  resolve.go
internal/session/: session.go
kernel/: kernel.json
