[project]
name = "hugr-kernel-dev"
version = "0.1.0"
description = "Development environment for Hugr GraphQL Jupyter Kernel"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.0",
    "hugr-perspective-viewer>=0.1.10",
    "hugr-graphql-ide",
]

[tool.uv.sources]
hugr-graphql-ide = { path = "extensions/jupyterlab", editable = true }
