[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hugr-kernel-dev"
version = "0.1.0"
description = "Development environment for Hugr GraphQL Jupyter Kernel"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.0",
    "hugr-perspective-viewer>=0.1.10",
    "jupyter-server>=2.0",
    "ipykernel>=6.0",
    "pyarrow>=14.0",
    "requests>=2.28",
]

[tool.hatch.build.targets.wheel]
packages = ["hugr_kernel", "hugr_connection_service"]

[tool.uv]
dev-dependencies = [
    "hatchling",
]
